[package]
name = "xpvcc-backend"
description = "Backend of Cross Platform Virtual Creator Candidate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
once_cell = "1.19.0"
open = "5.0.1"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["rustls-tls", "gzip", "json"], default-features = false }
serde = { version = "1.0.193", features = ["derive"] }
sysinfo = "0.29.11"
tempfile = "3.8.1"
uuid = { version = "1.6.1", features = ["v4"] }

[features]
# enables predicted feature. This feature is unstable and SemVer-exempt.
sdk_unstable = []
# enables Open Beta feature.
open_beta = []
